<resources>
    <string name="app_name">BloodDonationApp</string>
    <string name="title_activity_project" translatable="false">project</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_requestdonation">Request Donation</string>
    <string name="menu_settings">Setting</string>
    <string name="menu_about">About</string>
    <string name="google_maps_key" translatable="false">AIzaSyCDzg_QY-v1B2dnMcn1cdTqcgxR-DOqzJI</string>
    <string name="logout">Logout</string>
    <string name="donate">Donate</string>
    <string name="request_donation">Request Donation</string>
    <string name="my_requests">My Requests</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="thanks_for_making_a_difference">Thanks For Making a Difference</string>
    <string name="every_donation_can_save_a_person_life">Every Donation Can Save A Person Life</string>
    <string name="blood_type">Blood type</string>
    <string name="total_donations">Total donations</string>

    <string name="organization_number">Organization Number:</string>
    <string name="available_types">Available Types:</string>
    <string name="donation_center_name">Donation Center Name:</string>
    <string name="organization_name">Organization Name:</string>
    <string name="statues">Statues</string>
    <string name="amount">Amount</string>
    <string name="reason">Reason</string>
    <string name="account_information">Account Information</string>
    <string name="change_email">Change Email</string>
    <string name="e_mail">E-mail</string>
    <string name="send_password_reset">Send Password Reset</string>
    <string name="change_name">Change Name</string>
    <string name="name">Name</string>
    <string name="personal_information">Personal Information</string>
    <string name="age">Age</string>
    <string name="national_id_number">National ID Number</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="do_you_have_any_of_the_following_conditions">Do you have any of the following conditions ?</string>
    <string name="cancer">Cancer</string>
    <string name="cardiac_disease">Cardiac disease</string>
    <string name="lung_disease">Lung disease</string>
    <string name="hepatitis_b_and_c">hepatitis B and C</string>
    <string name="hiv_infection">HIV infection</string>
    <string name="aids_or_sexually_transmitted_diseases_std">AIDS or Sexually Transmitted Diseases (STD)</string>
    <string name="chronic_alcoholism">Chronic alcoholism</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="acute_fever">Acute fever</string>
    <string name="ear_or_body_piercing_and_tattooing">Ear or body piercing and tattooing</string>
    <string name="update_info">Update info</string>
    <string name="under_supervision">Under Supervision</string>
    <string name="dr_hossam_refaat">DR Hossam Refaat</string>
    <string name="team_members">Team Members</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="fill_the_form_to_complete_your_request">Fill the form to complete your request</string>
    <string name="reason_for_your_request">Reason For your request</string>
    <string name="explain_the_medical_condition_that_require_blood_and_if_the_blood_is_not_for_you_provide_the_information_about_the_person_that_will_recive_the_blood_in_more_than_100_word">Explain the medical condition that require blood and if the blood is not for you provide the information about the person that will recive the blood in more than 100 word</string>
    <string name="amount_in_ml">Amount in ml</string>
    <string name="i_agree_to_share_my_profile_data_with_this_organization">I Agree to share My Profile Data With This Organization</string>
    <string name="send_request">Send Request</string>
    <string name="new_user">New User</string>
    <string name="nedeed_types_1">Needed Types:</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="create_account">Create Account And Login To Access The Application Features</string>
    <string name="platform">Multi Platform Service</string>
    <string name="available_android_web">Our Service is Available Via Our Android And Website</string>
    <string name="many_org">Many Organizations Available</string>
    <string name="you_can_choose">\"You Can Choose Between Many Different Donation Centers \"</string>
    <string name="trusted_org">Trusted Organizations</string>
    <string name="centers_managed">Donation Centers is Managed by Licenced Organizations That is Chosen by The Egyptian Ministry of Health</string>
    <string name="req_statues">Requests Statues</string>
    <string name="view_requests">You Can View Your Requests Statues Any Time</string>
    <string name="navigation">Navigation</string>
    <string name="can_navigate">You Can Navigate To Any Donation Center by Maps</string>
    <string name="you_matters">Your Donation Matters</string>
    <string name="save_people">Your Donations Will Save People Lives and Help The Most Needed</string>
    <string name="professional">Professional Doctors and Nurses</string>
    <string name="top_doc">Our Donation Centers Have The Top Doctors And Nurses To Provide You With The Best Experience</string>
    <string name="amount_in_ml_max_470ml">Amount in ml Max 470ml</string>

</resources>