<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Donate"
            android:icon="@drawable/ic_hand_holding_water"
            android:title="@string/donate" />
        <item
            android:id="@+id/nav_Request_Donation"
            android:icon="@drawable/ic_hand_holding_heart"
            android:title="@string/request_donation" />
        <item
            android:id="@+id/nav_my_requests"
            android:icon="@drawable/ic_baseline_library_books_24"

            android:title="@string/my_requests" />
        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_About"
            android:icon="@drawable/ic_info_24"
            android:title="@string/about" />
    </group>
</menu>