<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.blooddonationapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_Donate"
        android:name="com.example.blooddonationapp.ui.Donate.DonateFragment"
        android:label="@string/menu_donate"
        tools:layout="@layout/fragment_donate" />

    <fragment
        android:id="@+id/nav_Request_Donation"
        android:name="com.example.blooddonationapp.ui.RequsetDonation.RequsetDonationFragment"
        android:label="@string/menu_requestdonation"
        tools:layout="@layout/fragment_request_donation" />
    <fragment
        android:id="@+id/nav_Settings"
        android:name="com.example.blooddonationapp.ui.Settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_About"
        android:name="com.example.blooddonationapp.ui.About.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>