<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,NotSibling">

        <LinearLayout

            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="15dp">

            <EditText
                android:id="@+id/TextEmail"
                android:layout_width="260dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:gravity="center"

                android:textAlignment="gravity"
                android:background="@drawable/style"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.543"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/set_password"
                android:layout_width="260dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/style"

                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:gravity="center"

                android:textAlignment="gravity"
                android:textColor="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.543"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:gravity="center"

                android:textAlignment="gravity"
                android:id="@+id/TextName"
                android:layout_width="260dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"

                android:background="@drawable/style"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"

                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.543"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/numberAge"
                android:layout_width="260dp"
                android:layout_height="36dp"
                android:gravity="center"

                android:textAlignment="gravity"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"

                android:background="@drawable/style"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.543"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:gravity="center"

                android:textAlignment="gravity"
                android:id="@+id/TextNational"
                android:layout_width="260dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/style"

                android:ems="10"
                android:hint="@string/national_id_number"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.543"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/TextAddress"
                android:layout_width="260dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/style"
                android:gravity="center"

                android:textAlignment="gravity"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.542"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/blood_type" />

                <Spinner
                    android:id="@+id/BloodType1"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <Spinner
                    android:id="@+id/BloodType2"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/Group1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"

                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender" />

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/male"

                        />

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/female" />

                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/do_you_have_any_of_the_following_conditions"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cancer" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cardiac_disease" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lung_disease" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hepatitis_b_and_c" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hiv_infection" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aids_or_sexually_transmitted_diseases_std" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chronic_alcoholism" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pregnancy" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acute_fever" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ear_or_body_piercing_and_tattooing" />

            <Button

                android:id="@+id/sign_up"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_margin="50dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/style_button"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:backgroundTint='#B31217' />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>